--- a/speakit.html
+++ b/speakit.html
@@ -36,106 +36,114 @@
   </header>
 
   <main>
-    <div>
-      <ul class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li>SpeakIt</li>
-      </ul>
-    </div>
-    <section id="overview">
-      <div class="container">
-        <div class="row">
-          <div class="column">
-            <div class="column hero-image">
-              <img src="img/speakit/logo-speakit.png" alt="speakit-logo">
-            </div>
-            <h1><span class="subtitle">A Mobile Application for Learning Vocabulary</span><br><span>UX Design Case Study</span>
-            </h1>
-            <div class="column hero-image">
-              <img src="img/speakit/speakit-hero-visual.png" alt="speakit-hero-visual">
-            </div>  
-            
-           
-            <div class="row">
-              <div class="column">
-                <p class="h4">Goal</p>
-                <p>The goal of the project is to design a vocabulary, flash card app to make users practice languages,
-                  enjoy the app with games, and see their progress.
-                </p>
-              </div>
-              <div class="column">
-                <p class="h4">Duration</p>
-                <p>The project lasted for 1 month and concluded with the creation of a prototype.
-                </p>
-              </div>
-              <div class="column">
-                <p class="h4">Methods</p>
-                <p>Competitor analysis, user interviews, personas, information architecture, low-fi wireframes, and user
-                  testing.
-                </p>
-              </div>
-
-              <div class="column">
-                <p class="h4">Tools</p>
-                <p>I employed design tools like
-                </p>
-                <ul>
-                  <li>Figjam</li>
-                  <li>MockUp</li>
-                  <li>Marvel</li>
-                  <li>Illustrator</li>
-                  <li>Draw.io</li>
-                </ul>
-              </div>
-              <div class="column">
-                <p class="h4">My Responsibilities as a UX Designer</p>
-                <ul>
-                  <li>User Research</li>
-                  <li>Competitor Analysis</li>
-                  <li>Personas</li>
-                  <li>Low-Mid Fidelity Wireframes</li>
-                  <li>User Testing</li>
-                  <li>Iterations</li>
-                  <li>Prototyping</li>
-                </ul>
-              </div>
-              <div class="column">
-                <img src="img/speakit/speakit-mobile-app-visual-01.png" alt="speakit-low-fi-wireframe">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>    
-    </section>
-
-    <section id="insights">
-      <div class="container">
-        <h2>Insights</h2>
-        <div class="row">
-          <div class="column">
-            <p class="h4">Challenges</p>
-            <p>However, the deciding the concept was a challenge, it was enjoyable to gather the information and create
-              a gamification idea out of it so that user would learn the language with joy and more easier.
-            </p>
-          </div>
-          <div class="column">
-            <p class="h4">Takeaways</p>
-            <p>As a designer, I aimed for a look that stands out but still feels connected to the banking concept,
-              giving users a relaxed and confident vibe.
-            </p>
-            <p>Telling a good story is crucial – one that's convincing and practical. Also, considering the audience's
-              behaviours and personal details when creating it.
-            </p>
-          </div>
-          <div class="row">
-            <a href="img/speakit/speakit-presentation-nov-2023-v1.pdf" class="button" target="_blank">View Project</a>
-            <a href="https://marvelapp.com/prototype/2he9j9d6/screen/90036718" class="button" target="_blank">View
-              Prototype on Marvel</a>
-          </div>
-        </div>
+    <div class="project_detail">
+      <div>
+        <ul class="breadcrumb">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li>SpeakIt</li>
+        </ul>
       </div>
-    </section>
+      <section id="hero">
+        <div class="container">
+          <h1><span class="subtitle">A Mobile Application for Learning Vocabulary</span></h1>
+          <h2>UX Design Case Study</h2>
+          <div class="row">
+            <div class="column">
+              <div class="column hero-image">
+                <img src="img/speakit/logo-speakit.png" alt="speakit-logo">
+              </div>
+              <div class="column hero-image">
+                <img src="img/speakit/speakit-hero-visual.png" alt="speakit-hero-visual">
+              </div>
+            </div>
+            <div class="column">
+              <div class="row">
+                <div class="">
+                  <p class="h4">Goal</p>
+                  <p>The goal of the project is to design a vocabulary, flash card app to make users practice languages,
+                    enjoy the app with games, and see their progress.
+                  </p>
+                </div>
+                <div class="">
+                  <p class="h4">Duration</p>
+                  <p>The project lasted for 1 month and concluded with the creation of a prototype.
+                  </p>
+                </div>
+                <div class="">
+                  <p class="h4">Methods</p>
+                  <p>Competitor analysis, user interviews, personas, information architecture, low-fi wireframes, and user
+                    testing.
+                  </p>
+                </div>
+                <div class="">
+                  <img src="img/speakit/speakit-mobile-app-visual-01.png" alt="speakit-low-fi-wireframe">
+                </div>
+                <div class="button-wrapper">
+                  <a href="img/speakit/speakit-presentation-nov-2023-v1.pdf" class="button" target="_blank">View Project</a>
+                  <a href="https://marvelapp.com/prototype/2he9j9d6/screen/90036718" class="button" target="_blank">View Prototype on Marvel</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>    
+      </section>
+
+      <section id="overview">
+        <div class="container">
+          <h2>Overview</h2>
+          <div class="row">
+            <div class="column">
+              <p class="h4">Tools</p>
+              <p>I employed design tools like
+              </p>
+              <ul>
+                <li>Figjam</li>
+                <li>MockUp</li>
+                <li>Marvel</li>
+                <li>Illustrator</li>
+                <li>Draw.io</li>
+              </ul>
+            </div>
+            <div class="column">
+              <p class="h4">My Responsibilities as a UX Designer</p>
+              <ul>
+                <li>User Research</li>
+                <li>Competitor Analysis</li>
+                <li>Personas</li>
+                <li>Low-Mid Fidelity Wireframes</li>
+                <li>User Testing</li>
+                <li>Iterations</li>
+                <li>Prototyping</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="insights">
+        <div class="container">
+          <h2>Insights</h2>
+          <div class="row">
+            <div class="column">
+              <p class="h4">Challenges</p>
+              <p>However, the deciding the concept was a challenge, it was enjoyable to gather the information and create
+                a gamification idea out of it so that user would learn the language with joy and more easier.
+              </p>
+            </div>
+            <div class="column">
+              <p class="h4">Takeaways</p>
+              <p>As a designer, I aimed for a look that stands out but still feels connected to the banking concept,
+                giving users a relaxed and confident vibe.
+              </p>
+              <p>Telling a good story is crucial – one that's convincing and practical. Also, considering the audience's
+                behaviours and personal details when creating it.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </main>
 
   <footer>
