src problem solved

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
             <div class="column project-card__content">
               <h3>My Portfolio Website Case Study</h3>
               <p>
-                My portfolio website is designed by me with HTL, CSS & JS to show that I can do the front-end-dev and also to tell my story and present my capability with recent works.
+                My portfolio website is designed by me with HTL, CSS and JS to show that I can do the front-end-dev and also to tell my story and present my capability with recent works.
               </p>
               <p>
                 I choose my name as the domain name "gulperi.com" because I love my name and I believe presenting myself only could work well with my own name as my brand.
@@ -121,8 +121,8 @@
               </div>
               <div class="column project-card__media">
                 <picture>
-                  <source srcset="img/voice for Alexa/6849502_3445423.svg" media="(max-width:767px)">
-                  <img src="img/voice for Alexa/6849502_3445423.svg" alt="speakit-image">
+                  <source srcset="img/voice_for_Alexa/6849502_3445423.svg" media="(max-width:767px)">
+                  <img src="img/voice_for_Alexa/6849502_3445423.svg" alt="speakit-image">
                 </picture>
               </div>
             </div>
