instead of use the form - please fill the form

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 <main>
   <section id="contact-form">
     <h2>Contact Form</h2>
-    <p class="contact-content">Are you interested in working with me, please use the form to get in touch or you may contact with me via social media.</p>
+    <p class="contact-content">Are you interested in working with me, please fill the form to get in touch or you may contact with me via social media.</p>
     <form action="#" method="POST">
       <div class="form-group">
         <label for="subject">Subject</label>
